--- a/themes/airevisuelle/layouts/partials/head/site-style.html
+++ b/themes/airevisuelle/layouts/partials/head/site-style.html
@@ -1,3 +1,3 @@
 <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i" rel="stylesheet"> -->
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,800,700,600|Montserrat:400,500,600,700|Raleway:100,300,600,700,800" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,800,700,600|Montserrat:400,500,600,700|Raleway:100,300,600,700,800" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="/css/style.min.css">
