Added stuff on home page

--- a/themes/airevisuelle/assets/scss/header.scss
+++ b/themes/airevisuelle/assets/scss/header.scss
@@ -34,6 +34,7 @@
                     transition: all .4s ease-in-out;
                     height: $header-height;
                     width: auto;
+                    padding: 15px 0px;
                 }
             }
         }
