--- a/themes/airevisuelle/assets/scss/variables.scss
+++ b/themes/airevisuelle/assets/scss/variables.scss
@@ -3,7 +3,7 @@
 -------------------------------------------------------------------------*/
 
 /*Colors*/
-$base-color:                     #1abc9c;
+$base-color:                     #00AE41;
 $body-color:                     #565656;
 
 $primary-color:                  #00AE41;
