--- a/themes/airevisuelle/layouts/_default/baseof.html
+++ b/themes/airevisuelle/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	{{- partial "site-head.html" . -}}
-	<body>
+	<body class="">
 		{{ `<!--[if lt IE 9]>
 		<div class="bg-danger text-center">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" class="highlight">upgrade your browser</a> to improve your experience.</div>
 	<![endif]-->` | safeHTML }}
