--- a/themes/airevisuelle/layouts/index.html
+++ b/themes/airevisuelle/layouts/index.html
@@ -1,5 +1,49 @@
 {{ define "main" }}
 <main class="main" id="homepage">
-	
+	<!-- Inspiro Slider -->
+  <div id="slider" class="inspiro-slider slider-fullscreen arrows-large arrows-creative dots-creative" data-height-xs="360">
+      <!-- Slide 1 -->
+      <div class="slide background-overlay-dark" data-parallax-image="/img/slider-1.jpg">
+          <div class="container">
+              <div class="slide-captions text-light">
+                  <!-- Captions -->
+                  <h1 style="padding-top:20%; max-width: 800px">{{ .Params.titre }}</h1>
+                  <p data-animation="fadeInUp" data-animation-delay="300" class="" style="padding-top:2%; margin-bottom: 20px;"><a href="#" class="business"><span class="business">50 $ de rabais sur la collection de lunettes XYZ</span></a>
+                  </p>
+                  <div style="padding-bottom: 7%"> 
+                      <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left"><span>Nos promotions</span><i class="fa fa-arrow-right"></i></button>
+                      <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left btn-light"><span class="btn-label">Prendre rendez-vous</span><i class="fa fa-arrow-right"></i></button>
+                  </div>
+                  <!-- end: Captions -->
+              </div>
+          </div>
+      </div>
+      <!-- end: Slide 1 -->
+  </div>
+  <!--end: Inspiro Slider -->
+  <div class="container" id="description">
+  	<div class="row">
+  		<div class="col-md-12">
+  			<p>Depuis plus de 25 ans, l’équipe de la clinique Duquette & Turgeon de Laval est à votre service. Pour mieux vous servir, elle vient d’emménager dans de nouveaux locaux plus modernes, spacieux et aérés, qu’ils ont rebaptisés L’Aire Visuelle.</p>
+				<p>L’aire visuelle, c’est une équipe d’expérience qui sait vous diriger vers ce qui est de mieux dans l’industrie. Avec un large inventaire de montures et de lunettes, vous saurez trouver celle qui réponds à vos besoins.</p>
+  		</div>
+      <div class="col-md-6" data-animation="fadeInUp" data-animation-delay="500">
+      	<div class="info">
+      		<h4><a href="#">Prenez rendez-vous en ligne<i class="fa fa-arrow-right" style="margin-left: 10px"></i></a></h4>
+          <p style="min-height: 56px;"><a href="#">Choisissez la date et l’heure</a> qui vous convient dans le confort de votre salon.</p>
+      	</div>
+      </div>
+      <!-- <div class="col-md-4" data-animation="fadeInUp" data-animation-delay="800">
+          <h4><a href="#">Venez nous voir en magasin<i class="fa fa-arrow-right" style="margin-left: 10px"></i></a></h4>
+          <p>À Laval sur le boulevard Dagenais, près de la 19.</p>
+      </div> -->
+      <div class="col-md-6" data-animation="fadeInUp" data-animation-delay="1100">
+      	<div class="info">
+      		<h4><a href="#">Grande sélection<i class="fa fa-arrow-right" style="margin-left: 10px"></i></a></h4>
+          <p>Plusieurs choix de lentilles et de montures à venir essayer en magasin. Regardez notre <a href="#">catalogue en ligne</a> pour un aperçu!</p>
+      	</div>
+      </div>
+    </div>
+  </div>
 </main>
 {{ end }}
