--- a/themes/airevisuelle/layouts/index.html
+++ b/themes/airevisuelle/layouts/index.html
@@ -7,10 +7,10 @@
           <div class="container">
               <div class="slide-captions text-light">
                   <!-- Captions -->
-                  <h1 style="padding-top:20%; max-width: 800px">{{ .Params.titre }}</h1>
-                  <p data-animation="fadeInUp" data-animation-delay="300" class="" style="padding-top:2%; margin-bottom: 20px;"><a href="#" class="business"><span class="business">50 $ de rabais sur la collection de lunettes XYZ</span></a>
+                  <h1>{{ .Params.titre }}</h1>
+                  <p data-animation="fadeInUp" data-animation-delay="300" class=""><a href="#" class="business"><span class="business">50 $ de rabais sur la collection de lunettes XYZ</span></a>
                   </p>
-                  <div style="padding-bottom: 7%"> 
+                  <div id="ctas"> 
                       <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left"><span>Nos promotions</span><i class="fa fa-arrow-right"></i></button>
                       <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left btn-light"><span class="btn-label">Prendre rendez-vous</span><i class="fa fa-arrow-right"></i></button>
                   </div>
@@ -29,21 +29,128 @@
   		</div>
       <div class="col-md-6" data-animation="fadeInUp" data-animation-delay="500">
       	<div class="info">
-      		<h4><a href="#">Prenez rendez-vous en ligne<i class="fa fa-arrow-right" style="margin-left: 10px"></i></a></h4>
-          <p style="min-height: 56px;"><a href="#">Choisissez la date et l’heure</a> qui vous convient dans le confort de votre salon.</p>
+      		<h4><a href="#">Prenez rendez-vous en ligne<i class="fa fa-arrow-right"></i></a></h4>
+          <p><a href="#">Choisissez la date et l’heure</a> qui vous convient dans le confort de votre salon.</p>
+          <img src="/img/logo-bg-w.png" alt="Aire visuelle">
       	</div>
       </div>
       <!-- <div class="col-md-4" data-animation="fadeInUp" data-animation-delay="800">
-          <h4><a href="#">Venez nous voir en magasin<i class="fa fa-arrow-right" style="margin-left: 10px"></i></a></h4>
+          <h4><a href="#">Venez nous voir en magasin<i class="fa fa-arrow-right"></i></a></h4>
           <p>À Laval sur le boulevard Dagenais, près de la 19.</p>
       </div> -->
       <div class="col-md-6" data-animation="fadeInUp" data-animation-delay="1100">
       	<div class="info">
-      		<h4><a href="#">Grande sélection<i class="fa fa-arrow-right" style="margin-left: 10px"></i></a></h4>
+      		<h4><a href="#">Grande sélection<i class="fa fa-arrow-right"></i></a></h4>
           <p>Plusieurs choix de lentilles et de montures à venir essayer en magasin. Regardez notre <a href="#">catalogue en ligne</a> pour un aperçu!</p>
+          <img src="/img/logo-bg-w.png" alt="Aire visuelle">
       	</div>
       </div>
     </div>
   </div>
+  <!-- PORTFOLIO -->
+  <section class="p-b-0">
+      <div class="container">
+          <div class="heading text-left">
+              <h2>Nos designers les plus populaires</h2>
+              <span class="lead">Avec plus de 20 marques différentes offertes, l’Aire Visuelle vous offre une grande variété de lunettes et de monture ! Voici quelques unes de nos marques les plus populaires: </span> 
+          </div>
+      </div>
+      <div class="portfolio">
+          <!-- Portfolio Items -->
+          <div id="portfolio" class="grid-layout portfolio-4-columns" data-margin="0">
+							{{ range .Params.designers}}
+              <!-- portfolio item -->
+              <div class="portfolio-item img-zoom pf-illustrations pf-media hover-3d pf-icons pf-Media">
+                  <div class="portfolio-item-wrap">
+                      <div class="portfolio-image">
+                          <a href="#"><img src="images/portfolio/61.jpg" alt=""></a>
+                      </div>
+                      <div class="portfolio-description">
+                          <a href="portfolio-page-grid-gallery.html">
+                              <h3>Let's Go Outside</h3>
+                              <span>Illustrations / Graphics</span> </a>
+                      </div>
+                  </div>
+              </div>
+              <!-- end: portfolio item -->
+              {{ end }}
+          </div>
+          <!-- end: Portfolio Items -->
+
+      </div>
+  </section>
+  <!-- end: PORTFOLIO -->
+  <!-- Testimonial Carousel -->
+        <section>
+            <div class="container">
+                
+                <!-- Testimonials -->
+                <div class="carousel arrows-visibile testimonial testimonial-single testimonial-left" data-items="1" data-autoplay="true" data-loop="true" data-autoplay-timeout="3500">
+
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <img src="images/team/9.jpg" alt="">
+                        <p>Polo is by far the most amazing template out there! I literally could not be happier that I chose to buy this template!</p>
+                        <span>Alan Monre</span>
+                        <span>CEO, Square Software</span>
+                    </div>
+                    <!-- end: Testimonials item-->
+
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <img src="images/team/9.jpg" alt="">
+                        <p>Polo is by far the most amazing template out there! I literally could not be happier that I chose to buy this template!</p>
+                        <span>Alan Monre</span>
+                        <span>CEO, Square Software</span>
+                    </div>
+                    <!-- end: Testimonials item-->
+
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <img src="images/team/9.jpg" alt="">
+                        <p>The world is a dangerous place to live; not because of the people who are evil, but because of the people who don't do anything about it.</p>
+                        <span>Alan Monre</span>
+                        <span>CEO, Square Software</span>
+                    </div>
+                    <!-- end: Testimonials item-->
+
+                </div>
+                <!-- end: Testimonials -->
+                <hr class="space">
+                
+                 <!-- Testimonials -->
+                <div class="carousel arrows-visibile testimonial testimonial-single testimonial-blockquote" data-items="1" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-loop="true">
+
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <p>Polo is by far the most amazing template out there! I literally could not be happier that I chose to buy this template!</p>
+                        <span>Alan Monre</span>
+                        <span>CEO, Square Software</span>
+                    </div>
+                    <!-- end: Testimonials item-->
+
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <p>Polo is by far the most amazing template out there! I literally could not be happier that I chose to buy this template!</p>
+                        <span>Alan Monre</span>
+                        <span>CEO, Square Software</span>
+                    </div>
+                    <!-- end: Testimonials item-->
+
+                    <!-- Testimonials item -->
+                    <div class="testimonial-item">
+                        <p>The world is a dangerous place to live; not because of the people who are evil, but because of the people who don't do anything about it.</p>
+                        <span>Alan Monre</span>
+                        <span>CEO, Square Software</span>
+                    </div>
+                    <!-- end: Testimonials item-->
+
+                </div>
+                <!-- end: Testimonials -->     
+                
+            </div>
+        </section>
+        <!-- end: Testimonial Carousel -->
+        
 </main>
 {{ end }}
