--- a/themes/airevisuelle/layouts/index.html
+++ b/themes/airevisuelle/layouts/index.html
@@ -24,6 +24,10 @@
   <div class="container" id="description">
   	<div class="row">
   		<div class="col-md-12">
+  			<div class="heading text-left">
+  				<h2>L'aire visuelle</h2>
+  				<hr>
+  			</div>
   			<p>Depuis plus de 25 ans, l’équipe de la clinique Duquette & Turgeon de Laval est à votre service. Pour mieux vous servir, elle vient d’emménager dans de nouveaux locaux plus modernes, spacieux et aérés, qu’ils ont rebaptisés L’Aire Visuelle.</p>
 				<p>L’aire visuelle, c’est une équipe d’expérience qui sait vous diriger vers ce qui est de mieux dans l’industrie. Avec un large inventaire de montures et de lunettes, vous saurez trouver celle qui réponds à vos besoins.</p>
   		</div>
@@ -43,21 +47,23 @@
       </div> -->
     </div>
   </div>
-  <section id="page-content">
+  <section id="actions">
+  		<div class="container">
   	 <!-- Portfolio -->
             <div id="portfolio" class="grid-layout portfolio-3-columns">
 
 
                 <!-- portfolio item -->
-                <div class="portfolio-item img-zoom pf-illustrations pf-media pf-icons pf-Media">
+                <div class="portfolio-item haut img-zoom pf-illustrations pf-media pf-icons pf-Media">
                     <div class="portfolio-item-wrap">
                         <div class="portfolio-image">
                             <a href="#"><img src="/img/quart/opticien-2.jpg" alt=""></a>
                         </div>
                         <div class="portfolio-description">
                             <a href="portfolio-page-grid-gallery.html">
-                                <h3>Let's Go Outside</h3>
-                                <span>Illustrations / Graphics</span>
+                                <h3>PRENEZ RENDEZ-VOUS EN lIGNE</h3>
+                                <span>Choisissez la date et l’heure qui vous convient dans le confort de votre salon</span>
+                                <button type="button" class="btn btn-rounded" style="margin-top: 20px;"><span>Prendre rendez-vous</span></button>
                             </a>
                         </div>
                     </div>
@@ -72,8 +78,9 @@
                         </div>
                         <div class="portfolio-description">
                             <a href="portfolio-page-grid-gallery.html">
-                                <h3>Let's Go Outside</h3>
-                                <span>Illustrations / Graphics</span>
+                                <h3>VENEZ NOUS VOIR EN MAGASIN</h3>
+                                <span>À laval sur le boulevard Dagenais, près de la 19</span>
+                                <button type="button" class="btn btn-rounded" style="margin-top: 20px;"><span>Nos coordonnées</span></button>
                             </a>
                         </div>
                     </div>
@@ -81,15 +88,16 @@
                 <!-- end: portfolio item -->
 
                 <!-- portfolio item -->
-                <div class="portfolio-item img-zoom pf-illustrations pf-media pf-icons pf-Media">
+                <div class="portfolio-item haut img-zoom pf-illustrations pf-media pf-icons pf-Media">
                     <div class="portfolio-item-wrap">
                         <div class="portfolio-image">
                             <a href="#"><img src="/img/quart/optometriste-1.jpg" alt=""></a>
                         </div>
                         <div class="portfolio-description">
                             <a href="portfolio-page-grid-gallery.html">
-                                <h3>Let's Go Outside</h3>
-                                <span>Illustrations / Graphics</span>
+                                <h3>DE NOMBREUX CHOIX</h3>
+                                <span>Plusieurs choix de lentilles et de montures à venir essayer en magasin. Regardez notre catalogue en ligne pour un aperçu!</span>
+                                <button type="button" class="btn btn-rounded" style="margin-top: 20px;"><span>Voir le catalogue</span></button>
                             </a>
                         </div>
                     </div>
@@ -104,8 +112,9 @@
                         </div>
                         <div class="portfolio-description">
                             <a href="portfolio-page-grid-gallery.html">
-                                <h3>Let's Go Outside</h3>
-                                <span>Illustrations / Graphics</span>
+                                <h3>PROMOTIONS DU MOIS</h3>
+                                <span>50 $ de rabais sur la collection de lunettes XYZ</span>
+                                <button type="button" class="btn btn-rounded" style="margin-top: 20px;"><span>Voir la promotion</span></button>
                             </a>
                         </div>
                     </div>
@@ -115,38 +124,41 @@
                 
             </div>
             <!-- end: Portfolio -->
+      </div>
   </section>
   <!-- PORTFOLIO -->
   <section class="p-b-0">
       <div class="container">
           <div class="heading text-left">
               <h2>Nos designers les plus populaires</h2>
-              <span class="lead">Avec plus de 20 marques différentes offertes, l’Aire Visuelle vous offre une grande variété de lunettes et de monture ! Voici quelques unes de nos marques les plus populaires: </span> 
+              <hr>
           </div>
-      </div>
-      <div class="portfolio">
-          <!-- Portfolio Items -->
-          <div id="portfolio" class="grid-layout portfolio-4-columns" data-margin="0">
-							{{ range .Params.designers}}
-              <!-- portfolio item -->
-              <div class="portfolio-item img-zoom pf-illustrations pf-media hover-3d pf-icons pf-Media">
-                  <div class="portfolio-item-wrap">
-                      <div class="portfolio-image">
-                          <a href="#"><img src="/img/quart/{{.}}-airevisuelle.jpg" alt=""></a>
-                      </div>
-                      <div class="portfolio-description">
-                          <a href="portfolio-page-grid-gallery.html">
-                              <h3>Let's Go Outside</h3>
-                              <span>Illustrations / Graphics</span> </a>
-                      </div>
-                  </div>
-              </div>
-              <!-- end: portfolio item -->
-              {{ end }}
-          </div>
-          <!-- end: Portfolio Items -->
+          <p style="margin-bottom: 80px;">Avec plus de 20 marques différentes offertes, l’Aire Visuelle vous offre une grande variété de lunettes et de monture ! Voici quelques unes de nos marques les plus populaires: </p>
+          <div class="portfolio">
+		          <!-- Portfolio Items -->
+		          <div id="portfolio" class="grid-layout portfolio-4-columns" data-margin="0">
+									{{ range .Params.designers}}
+		              <!-- portfolio item -->
+		              <div class="portfolio-item img-zoom pf-illustrations pf-media hover-3d pf-icons pf-Media">
+		                  <div class="portfolio-item-wrap">
+		                      <div class="portfolio-image">
+		                          <a href="#"><img src="/img/quart/{{.id}}-airevisuelle.jpg" alt=""></a>
+		                      </div>
+		                      <div class="portfolio-description">
+		                          <a href="portfolio-page-grid-gallery.html">
+		                              <h3>Voir les produits</h3>
+		                              <span>{{.nom}}</span> </a>
+		                      </div>
+		                  </div>
+		              </div>
+		              <!-- end: portfolio item -->
+		              {{ end }}
+		          </div>
+		          <!-- end: Portfolio Items -->
 
+		      </div>
       </div>
+      
   </section>
   <!-- end: PORTFOLIO -->
   <!-- Testimonial Carousel -->
@@ -155,31 +167,15 @@
                 
                  <!-- Testimonials -->
                 <div class="carousel arrows-visibile testimonial testimonial-single testimonial-blockquote" data-items="1" data-autoplay="true" data-animate-in="fadeIn" data-animate-out="fadeOut" data-loop="true">
-
+								{{ range .Site.Data.testimonials.testimonials }}
                     <!-- Testimonials item -->
                     <div class="testimonial-item">
-                        <p>Polo is by far the most amazing template out there! I literally could not be happier that I chose to buy this template!</p>
-                        <span>Alan Monre</span>
-                        <span>CEO, Square Software</span>
+                        <p>{{ .text }}</p>
+                        <span>{{.name}}</span>
+                        <span>{{.title}}</span>
                     </div>
                     <!-- end: Testimonials item-->
-
-                    <!-- Testimonials item -->
-                    <div class="testimonial-item">
-                        <p>Polo is by far the most amazing template out there! I literally could not be happier that I chose to buy this template!</p>
-                        <span>Alan Monre</span>
-                        <span>CEO, Square Software</span>
-                    </div>
-                    <!-- end: Testimonials item-->
-
-                    <!-- Testimonials item -->
-                    <div class="testimonial-item">
-                        <p>The world is a dangerous place to live; not because of the people who are evil, but because of the people who don't do anything about it.</p>
-                        <span>Alan Monre</span>
-                        <span>CEO, Square Software</span>
-                    </div>
-                    <!-- end: Testimonials item-->
-
+								{{ end }}
                 </div>
                 <!-- end: Testimonials -->     
                 
