--- a/themes/airevisuelle/layouts/partials/site-footer.html
+++ b/themes/airevisuelle/layouts/partials/site-footer.html
@@ -6,15 +6,17 @@
           <div class="col-md-4"> 
             <!-- Footer widget area 1 -->
             <div class="widget  widget-contact-us" style="background-image: url('images/world-map-dark.png'); background-position: 50% 20px; background-repeat: no-repeat">
-              <h4>About POLO</h4>
+              <h4>L'aire visuelle</h4>
               <ul class="list-icon">
-                <li><i class="fa fa-map-marker"></i> 795 Folsom Ave, Suite 600 <br>
-                  San Francisco, CA 94107</li>
-                <li><i class="fa fa-phone"></i> (123) 456-7890 </li>
-                <li><i class="fa fa-envelope"></i> <a href="mailto:first.last@example.com">first.last@example.com</a> </li>
+                <li><i class="fa fa-map-marker"></i> 380 boul. Dagenais Est, suite 102 <br>
+                  Laval (Québec), Coin René-Laennec</li>
+                <li><i class="fa fa-phone"></i> (450) 669-1686 </li>
+                <li><i class="fa fa-envelope"></i> <a href="mailto:first.last@example.com">info@airevisuelle.com</a> </li>
                 <li> <br>
-                  <i class="fa fa-clock-o"></i>Monday - Friday: <strong>08:00 - 22:00</strong> <br>
-                  Saturday, Sunday: <strong>Closed</strong> </li>
+                  <i class="fa fa-clock-o"></i>Lundi - Jeudi: <strong>08:00 - 20:00</strong> <br>
+                  Vendredi <strong>9:00 - 18:00</strong><br>
+                  Samedi: <strong>10:00 - 16:00</strong><br>
+                  Sunday: <strong>Fermé</strong> </li>
               </ul>
               <!-- Social icons -->
               <div class="social-icons social-icons-border float-left m-t-20">
@@ -58,23 +60,23 @@
           <div class="col-md-2"> 
             <!-- Footer widget area 2 -->
             <div class="widget">
-              <h4>Quick LInks</h4>
-              <ul class="list-icon list-icon-arrow">
+              <h4>Liens rapides</h4>
+              <!-- <ul class="list-icon list-icon-arrow">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Shortcodes</a></li>
-              </ul>
+              </ul> -->
             </div>
             <!-- end: Footer widget area 2 --> 
           </div>
           <div class="col-md-3"> 
             <!-- Footer widget area 3 -->
             <div class="widget">
-              <h4>Latest From Our Blog</h4>
-              <div class="post-thumbnail-list">
+              <h4>Nos articles les plus récents</h4>
+              <!-- <div class="post-thumbnail-list">
                 <div class="post-thumbnail-entry">
                   <div class="post-thumbnail-content">
                     <a href="#">Suspendisse consectetur fringilla luctus</a>
@@ -90,14 +92,14 @@
                     <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
                     <span class="post-date"><i class="fa fa-clock-o"></i> 11h ago</span> <span class="post-category"><i class="fa fa-tag"></i> Lifestyle</span> </div>
                 </div>
-              </div>
+              </div> -->
             </div>
             <!-- end: Footer widget area 3 --> 
           </div>
           <div class="col-md-3"> 
             <!-- Footer widget area 4 -->
-            <div class="widget widget-tweeter" data-username="ardianmusliu" data-limit="2">
-              <h4>Recent Tweets</h4>
+            <div class="" data-username="ardianmusliu" data-limit="2">
+              
             </div>
             <!-- end: Footer widget area 4 --> 
           </div>
