Ready for first client view

--- a/themes/airevisuelle/layouts/partials/site-footer.html
+++ b/themes/airevisuelle/layouts/partials/site-footer.html
@@ -98,8 +98,10 @@
           </div>
           <div class="col-md-3"> 
             <!-- Footer widget area 4 -->
-            <div class="" data-username="ardianmusliu" data-limit="2">
-              
+            <div class="widget" data-username="ardianmusliu" data-limit="2">
+              <h4>Promotions</h4>
+              <p>Obtenez 50$ de rabais sur la collection de lunettes XYZ</p>
+              <img src="/img/quart/opticien-1.jpg" alt="Rabais" style="max-width: 100%;">
             </div>
             <!-- end: Footer widget area 4 --> 
           </div>
