--- a/themes/airevisuelle/assets/scss/elements/headings.scss
+++ b/themes/airevisuelle/assets/scss/elements/headings.scss
@@ -154,7 +154,7 @@
     > h2 {
         font-size: 40px;
         font-family: $font-family-5;
-        text-transform: capitalize;
+        text-transform: uppercase;
         line-height: 46px;
         font-weight: 300;
     }
