--- a/themes/airevisuelle/layouts/partials/header/nav.html
+++ b/themes/airevisuelle/layouts/partials/header/nav.html
@@ -3,7 +3,7 @@
     <div class="container">
         <nav>
             <ul>
-                <li class="dropdown"> <a href="#">Catalogue</a></li>
+                <li class="dropdown"> <a href="/catalogue">Catalogue</a></li>
                 <li class="dropdown"> <a href="#">Services</a>
                     {{- partial "header/dropdown1.html" . -}}
                 </li>
