--- a/themes/airevisuelle/layouts/partials/site-footer.html
+++ b/themes/airevisuelle/layouts/partials/site-footer.html
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col-md-4"> 
             <!-- Footer widget area 1 -->
-            <div class="widget  widget-contact-us" style="background-image: url('images/world-map-dark.png'); background-position: 50% 20px; background-repeat: no-repeat">
+            <div class="widget  widget-contact-us" style="background-image: url('/images/world-map-dark.png'); background-position: 50% 20px; background-repeat: no-repeat">
               <h4>L'aire visuelle</h4>
               <ul class="list-icon">
                 <li><i class="fa fa-map-marker"></i> 380 boul. Dagenais Est, suite 102 <br>
