--- a/themes/airevisuelle/layouts/catalogue/list.html
+++ b/themes/airevisuelle/layouts/catalogue/list.html
@@ -37,7 +37,7 @@
           	 	</div>
 							<div class="col-md-3 col-sm-12 col-eq-height">
                   <!--call-to-action colored background -->
-                  <div class="call-to-action call-to-action-dark" style="height: 100%">
+                  <div class="call-to-action call-to-action-dark">
                       <h3>Vous ne trouvez pas le <span>produit</span> que vous cherchez?</h3>
                       <p>Prenez rendez-vous avec un expert facilement grâce à notre systèmes de réservation en ligne !</p>
                       <a class="btn btn-outline btn-light" href="{{.Site.Data.globals.rdvlink}}" target="_blank">Rendez-vous</a> </div>
