--- a/themes/airevisuelle/layouts/partials/header/menubar.html
+++ b/themes/airevisuelle/layouts/partials/header/menubar.html
@@ -5,7 +5,7 @@
         <div class="container">
             <!--Logo-->
             <div id="logo" style="padding: 10px;">
-                <a href="index.html" class="logo">
+                <a href="/" class="logo">
                     {{- partial "header/logo-svg.html" . -}}
                 </a>
             </div>
