--- a/themes/airevisuelle/layouts/partials/header/nav.html
+++ b/themes/airevisuelle/layouts/partials/header/nav.html
@@ -4,12 +4,13 @@
         <nav>
             <ul>
                 <li class="dropdown"> <a href="/catalogue">Catalogue</a></li>
+                <li class="dropdown"> <a href="/a-propos">À propos</a></li>
                 <li class="dropdown"> <a href="#">Services</a>
                     {{- partial "header/dropdown1.html" . -}}
                 </li>
                 <li class="dropdown"> <a href="#">Examen de la vue</a></li>
-                <li class="dropdown mega-menu-item"> <a href="#">Promotions</a></li> 
-                <li class="dropdown mega-menu-item"> <a href="#">Contact</a></li>
+                <!-- <li class="dropdown mega-menu-item"> <a href="#">Promotions</a></li>  -->
+                <li class="dropdown mega-menu-item"> <a href="/nous-rejoindre">Contact</a></li>
             </ul>
         </nav>
     </div>
