--- a/themes/airevisuelle/layouts/partials/header/topbar.html
+++ b/themes/airevisuelle/layouts/partials/header/topbar.html
@@ -1,5 +1,5 @@
 <!-- Topbar -->
-<div id="topbar" class="{{ if .Params.header.transparent }}header-transparent{{ end }} {{ if .Params.header.dark }}dark{{ end }}">
+<div id="topbar" class="{{ if .Params.header.transparent }}topbar-transparent{{ end }} {{ if .Params.header.dark }}dark{{ end }}">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-6">
