--- a/themes/airevisuelle/layouts/singles/a-propos.html
+++ b/themes/airevisuelle/layouts/singles/a-propos.html
@@ -1,5 +1,162 @@
 {{ define "main" }}
 <main class="main" id="a-propos">
+		<!-- Inspiro Slider -->
+        <div id="slider" class="inspiro-slider arrows-large arrows-creative dots-creative" data-height-xs="360">
+            <!-- Slide 2 -->
+            <div class="slide background-overlay-dark" style="background-image:url('/img/optometriste-a-propos.jpg'); background-position: 20%">
+                <div class="container">
+                    <div class="slide-captions text-center text-light">
+                        <!-- Captions -->
+                        <span class="strong">L'Aire Visuelle</span>
+                        <h1>{{.Params.titre}}</h1>
+                        <!-- end: Captions -->
+                    </div>
+                </div>
+            </div>
+            <!-- end: Slide 2 -->
 
+        </div>
+        <!--end: Inspiro Slider -->
+
+		<section class="about">
+			<div class="container">
+				<div class="row p-b-40">
+					<div class="col-md-3">
+						<div class="heading heading text-left">
+							<h2>NOTRE COMPAGNIE</h2>
+							
+						</div>
+					</div>
+					<div class="col-md-9">
+						<div class="col-md-6">L’équipe de L’Aire Visuelle est heureuse de vous accueillir dans sa nouvelle clinique de Vimont à Laval. Chic, spacieuse et moderne, la salle de montre vous en mettra plein la vue avec ses vastes collections de montures, dont sa sélection « haut de gamme ». Que ce soit pour des lunettes de prescription, des lunettes solaires ou des verres de contact, « L’Aire Visuelle » vous promet de vivre une expérience unique en matière de lunetterie. <br> <br> Consultez notre section produits pour voir quelques-unes de nos montures et de nos lunettes de soleil disponibles dans notre nouvelle salle d’exposition. Et Rappelez-vous… Il ne s’agit que d’un petit échantillonnage des 1400 montures sélectionnées judicieusement pour notre clientèle. </div>
+
+						<div class="col-md-6">Notre expérience et nos bonnes relations d’affaire auprès des fabricants de montures et des couturiers de grande réputation nous ont permis au fil des ans d’obtenir certains privilèges et l’exclusivité de les représenter ! Nos montures sont Exclusives ! Colorées ! Faits main ! Confortables ! Légères ! Notre grande sélection reflète les tendances actuelles de la mode en matière de lunetterie, elle répond aux besoins de notre fidèle clientèle que nous apprécions et sera très certainement plaire à nos « futurs clients ».
+						</div>
+					</div>
+
+				</div>
+				<!--call-to-action background image -->
+        <div class="call-to-action background-image" style="background-image:url('/img/airevisuelle-cta.jpg')">
+            <div class="col-md-10">
+                <h3 class="text-light">Promotion du moment: <span>50%</span> sur la collection XYZ</h3>
+                <p class="text-light">Prenez rendez-vous avec un expert facilement grâce à notre systèmes de réservation en ligne !</p>
+            </div>
+            <div class="col-md-2">
+                <a class="btn btn-light btn-outline">Rendez-vous</a> </div>
+        </div>
+        <!--END: call-to-action background image -->
+			</div>
+		</section>
+
+			
+		<section class="box-fancy section-fullwidth text-light p-b-0">
+				<div class="row">
+					<div style="background-color:#00AE41" class="col-md-4 col-eq-height steps">
+						<h6 class="text-large text-uppercase">01.</h6>
+						<img src="/img/logo-bg-w.png" alt="Aire visuelle" class="logo-bg">
+		                <h3>EXPÉRIENCE</h3>
+						<span>La réussite de notre entreprise « L’Aire Visuelle » repose surtout sur notre équipe composée de tous les intervenants et professionnels du domaine de l’optique. Toujours à l’affût des nouvelles technologies, ils sont passionnés de leur travail. </span>
+					</div>
+
+					<div style="background-color:rgba(0,174,65,0.72)" class="col-md-4 col-eq-height steps">
+						<h6 class="text-large text-uppercase">02.</h6>
+						<img src="/img/logo-bg-w.png" alt="Aire visuelle" class="logo-bg">
+		                <h3>IDENDITÉ</h3>
+						<span>Notre liberté en tant que bureau « d’optométristes et opticiens » indépendant nous permet de conserver une identité propre et offrir à notre clientèle une très grande diversité de produits. Notre engagement envers notre clientèle est primordial et le client demeure notre priorité ! </span>
+					</div>
+
+					<div style="background-color:rgba(0,174,65,0.5)" class="col-md-4 col-eq-height steps">
+						<h6 class="text-large text-uppercase">03.</h6>
+						<img src="/img/logo-bg-w.png" alt="Aire visuelle" class="logo-bg">
+		                <h3>STYLE</h3>
+						<span>Notre nouvel emplacement, et sa grande salle de montre, vaste et moderne, vous offre le plus grand choix de montures en ville ! « L’Aire Visuelle » devient une référence dans le domaine des soins oculo-visuel ! </span>
+					</div>
+				</div>
+		</section>
+
+		<section class="background-grey">
+			<div class="container">
+				<div class="heading heading-center">
+					<h2>Une équipe de professionnels à votre service</h2>
+					<span class="lead">Les membres de notre équipe de professionnels se composent de 4 optométristes, 3 opticiens ainsi que des conseillères-stylistes</span>
+				</div>
+				<div class="row team-members team-members-shadow m-b-40">
+					{{ range sort .Site.Data.equipe.equipe ".ordre"}}
+            <div class="col-md-3">
+                <div class="team-member">
+                    <div class="team-desc">
+                        <h3>{{.name}}</h3>
+                        <p>{{.title}}</p>
+                       
+                        <div class="align-center">
+                            <!-- <a class="btn btn-xs btn-slide btn-light" href="#">
+                                <i class="fa fa-facebook"></i>
+                                <span>Facebook</span>
+                            </a>
+                            <a class="btn btn-xs btn-slide btn-light" href="#" data-width="100">
+                                <i class="fa fa-twitter"></i>
+                                <span>Twitter</span>
+                            </a> -->
+                            <a class="btn btn-xs btn-slide btn-light" href="#" data-width="130">
+                                <i class="fa fa-calendar"></i>
+                                <span>Rendez-vous</span>
+                            </a>
+                            <a class="btn btn-xs btn-slide btn-light" href="mailto:#" data-width="115">
+                                <i class="fa fa-envelope"></i>
+                                <span>Courriel</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          {{ end }}
+        </div>
+			</div>
+		</section>
+		<section class="about">
+			<div class="container">
+				<div class="row p-b-40">
+					<div class="col-md-3">
+						<div class="heading heading text-left">
+							<h2>L'aire visuelle en image</h2>
+							
+						</div>
+					</div>
+					<div class="col-md-9">
+						<p>Après des années de travail, l’équipe de « L’Aire Visuelle » voulait « changer d’AIRE ». Elle a donc demandé à la firme d’architectes « La SHED architecture » de lui créer une clinique de facture moderne, spacieuse, au design épuré et fonctionnel. Résultat? Un espace hors du commun, aéré et lumineux, axé sur l’expérience client. Venez voir par vous-même!</p>
+						<!-- Gallery -->
+              <div class="grid-layout grid-3-columns" data-margin="20" data-item="grid-item" data-lightbox="gallery">
+                  <div class="grid-item">
+                    	<a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/img/quart/opticien-1.jpg"></a>
+                  </div>
+                  <div class="grid-item">
+                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/img/quart/opticien-2.jpg"></a>
+                  </div>
+                  <div class="grid-item">
+                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/img/quart/optometriste-1.jpg"></a>
+                  </div>
+                  <div class="grid-item">
+                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/img/quart/optometriste-2.jpg"></a>
+                  </div>
+                  <div class="grid-item">
+                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/img/quart/optometriste-3.jpg"></a>
+                  </div>
+                  <div class="grid-item">
+                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/img/quart/optometriste-4.jpg"></a>
+                  </div>
+                  <div class="grid-item">
+                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/img/quart/optometriste-5.jpg"></a>
+                  </div>
+                  <div class="grid-item">
+                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/img/quart/optometriste-6.jpg"></a>
+                  </div>
+              </div>
+              <!-- end: Gallery -->
+					</div>
+
+				</div>
+        
+			</div>
+		</section>
 </main>
 {{ end }}
