service single page

--- a/themes/airevisuelle/assets/scss/custom.scss
+++ b/themes/airevisuelle/assets/scss/custom.scss
@@ -268,3 +268,15 @@ section {
 		}
 	}
 }
+
+/*==================================
+=            Srdjan CSS            =
+==================================*/
+
+.inner-header {
+	height:500px;
+	background:red;
+	width:100%;
+}
+
+/*=====  End of Srdjan CSS  ======*/
