--- a/themes/airevisuelle/layouts/services/single.html
+++ b/themes/airevisuelle/layouts/services/single.html
@@ -1,6 +1,205 @@
 {{ define "main" }}
 <main class="main" id="{{ .Type }}-indiv">
 	
+        <!-- Page title -->
+        <section id="page-title" class="background-image background-overlay-dark" style="background-image:url(/img/new/service-header.jpg);">
+            <div class="container">
+
+                <div class="page-title">
+                    <div data-animation="fadeIn" class="text-light">
+                        <h1 data-animation="fadeInUp" data-animation-delay="1000">Service name here</h1></div>
+                </div>
+            </div>
+        </section>
+        <!-- end: Page title -->
+
+         <!-- Page Content -->
+        <section id="page-content" class="sidebar-both">
+            <div class="container">
+                <div class="row">
+                    
+                    <!-- Sidebar-->
+                    <div class="sidebar sidebar-modern col-md-3">
+
+                        <div class="widget  widget-newsletter">
+                            <form id="widget-search-form-sidebar" action="search-results-page.html" method="get" class="form-inline">
+                                <div class="input-group">
+                                    <input type="text" aria-required="true" name="q" class="form-control widget-search-form" placeholder="Search for pages..."> <span class="input-group-btn">
+				                  <button type="submit" id="widget-widget-search-form-button" class="btn btn-default"><i class="fa fa-search"></i></button>
+				                  </span> </div>
+                            </form>
+                        </div>
+                        <!--end: widget newsletter-->
+
+
+                            <!--Services-->
+                            <div class="widget clearfix widget-categories">
+                                <h4 class="widget-title">Our Services</h4>
+                                <ul class="list list-arrow-icons">
+                                    <li> <a title="" href="#">Development </a> </li>
+                                    <li> <a title="" href="#">Branding </a> </li>
+                                    <li> <a title="" href="#">Marketing </a> </li>
+                                    <li> <a title="" href="#">Branding </a> </li>
+                                    <li> <a title="" href="#">Strategy solutions</a> </li>
+                                    <li> <a title="" href="#">Copywriting </a> </li>
+                                </ul>
+                            </div>
+                            <!--End: Services-->
+
+                            <div class="widget ">
+                                <h4 class="widget-title">Recent Posts</h4>
+                                <div class="post-thumbnail-list">
+                                    <div class="post-thumbnail-entry">
+                                        <img alt="" src="images/blog/thumbnail/5.jpg">
+                                        <div class="post-thumbnail-content">
+                                            <a href="#">Suspendisse consectetur fringilla luctus</a>
+                                            <span class="post-date"><i class="fa fa-clock-o"></i> 6m ago</span>
+                                            <span class="post-category"><i class="fa fa-tag"></i> Technology</span>
+                                        </div>
+                                    </div>
+                                    <div class="post-thumbnail-entry">
+                                        <img alt="" src="images/blog/thumbnail/6.jpg">
+                                        <div class="post-thumbnail-content">
+                                            <a href="#">Consectetur adipiscing elit</a>
+                                            <span class="post-date"><i class="fa fa-clock-o"></i> 24h ago</span>
+                                            <span class="post-category"><i class="fa fa-tag"></i> Lifestyle</span>
+                                        </div>
+                                    </div>
+                                    <div class="post-thumbnail-entry">
+                                        <img alt="" src="images/blog/thumbnail/7.jpg">
+                                        <div class="post-thumbnail-content">
+                                            <a href="#">Lorem ipsum dolor sit amet</a>
+                                            <span class="post-date"><i class="fa fa-clock-o"></i> 11h ago</span>
+                                            <span class="post-category"><i class="fa fa-tag"></i> Lifestyle</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--End: Tabs with Posts-->
+
+
+                        </div>
+                    <!-- end: Sidebar-->
+                    
+                    <!-- content -->
+                    <div class="content col-md-9">
+                        <!-- Blog -->
+                        <div id="blog" class="single-post">
+                            <!-- Post single item-->
+                            <div class="post-item">
+                                <div class="post-item-wrap">
+
+                                    <div class="post-item-description">
+                                        <h2>Service name goes here something</h2>
+                                        <p>Curabitur pulvinar euismod ante, ac sagittis ante posuere ac. Vivamus luctus commodo dolor porta feugiat. Fusce at velit id ligula pharetra laoreet. Ut nec metus a mi ullamcorper hendrerit. Nulla facilisi. Pellentesque sed nibh a quam accumsan dignissim quis quis urna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id dolor dui, dapibus gravida elit. Donec consequat laoreet sagittis. Suspendisse ultricies ultrices viverra. Morbi rhoncus laoreet tincidunt. Mauris interdum convallis metus.M</p>
+                                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id dolor dui, dapibus gravida elit. Donec consequat laoreet sagittis. Suspendisse ultricies ultrices viverra. Morbi rhoncus laoreet tincidunt. Mauris interdum convallis metus. Suspendisse vel lacus est, sit amet tincidunt erat. Etiam purus sem, euismod eu vulputate eget, porta quis sapien. Donec tellus est, rhoncus vel scelerisque id, iaculis eu nibh.</p>
+
+                                        <ul>
+                                        	<li>Examen visuel complet et analyse de la fonction visuelle</li>
+                                        	<li>Traitement des déficiences visuelles au moyen de l’orthoptique et de lentilles ophtalmiques, sous forme de lunettes ou de lentilles cornéennes;</li>
+											<li>Traitement de conditions oculaires infectieuses et inflammatoires (conjonctivites, blépharites, uvéites, corps étrangers, etc.) par la prescription de médicaments ou de recommandations  appropriées;</li>
+											<li>Collaboration avec d’autres professionnels de la santé, notamment des ophtalmologistes, pour le suivi des patients ayant subi une chirurgie réfractive ou aux prises avec certaines conditions telles que le glaucome, le diabète et autres;</li>
+											<li>Conseils pour prévenir les troubles visuels et promouvoir les moyens favorisant une bonne vision</li>
+                                        </ul>
+
+								        <div class="call-to-action background-image" style="background-image:url('/img/airevisuelle-cta.jpg')">
+								            <div class="col-md-10">
+								                <h3 class="text-light">Promotion du moment: collection XYZ</h3>
+								                <p class="text-light">Prenez rendez-vous avec un expert facilement grâce à notre systèmes de réservation en ligne !</p>
+								            </div>
+								            <div class="col-md-2">
+								                <a class="btn btn-light btn-outline">Rendez-vous</a> </div>
+								        </div>
+								        <!--END: call-to-action background image -->                                        
+
+											<h3>FAQ:</h3>
+											<p>On peut raccourcir la FAQ si elle est trop longue...</p>
+											<div class="accordion">
+												<div class="ac-item">
+													<h5 class="ac-title">À quel âge doit-on débuter les examens visuels ? Et à quelle fréquence par la suite?</h5>
+													<div class="ac-content">
+														<p>Il faut amener votre enfant chez l’optométriste dès qu’il manifeste une plainte visuelle ou un comportement vous faisant douter d’un problème de vision. Dès l’âge de trois ans, à l’aide de dessins et de tests objectifs, l’optométriste pourra identifier le trouble visuel de votre enfant. </p>
+
+														<p>Ensuite, il est recommandé de passer un examen de la vue avant de débuter la maternelle pour s’assurer du bon fonctionnement du système visuel, car ce dernier peut avoir un impact important l’apprentissage de connaissances scolaires.
+														<p>
+														La croissance du corps s’accompagnant de celle du globe oculaire, la vision peut changer et un examen visuel annuel est fortement recommandé. De plus, personne n’est à l’ abri des maladies oculaires et des complications! Certaines pathologies s’installent sans symptômes préalables. Faire vérifier la santé de vos yeux une fois par année vous permet de bénéficier de la meilleure santé oculaire possible et de la meilleure vision s’y associant.
+														</p>
+							                        </div>
+												</div>
+												<!-- // item  -->
+
+												<div class="ac-item">
+													<h5 class="ac-title">Quelle est la différence entre un opticien d’ordonnances, un optométriste et un ophtalmologiste?</h5>
+													<div class="ac-content">
+														<p>Il faut amener votre enfant chez l’optométriste dès qu’il manifeste une plainte visuelle ou un comportement vous faisant douter d’un problème de vision. Dès l’âge de trois ans, à l’aide de dessins et de tests objectifs, l’optométriste pourra identifier le trouble visuel de votre enfant. </p>
+
+														<p>Ensuite, il est recommandé de passer un examen de la vue avant de débuter la maternelle pour s’assurer du bon fonctionnement du système visuel, car ce dernier peut avoir un impact important l’apprentissage de connaissances scolaires.
+														<p>
+														La croissance du corps s’accompagnant de celle du globe oculaire, la vision peut changer et un examen visuel annuel est fortement recommandé. De plus, personne n’est à l’ abri des maladies oculaires et des complications! Certaines pathologies s’installent sans symptômes préalables. Faire vérifier la santé de vos yeux une fois par année vous permet de bénéficier de la meilleure santé oculaire possible et de la meilleure vision s’y associant.
+														</p>
+							                        </div>
+												</div>
+												<!-- // item  -->
+
+												<div class="ac-item">
+													<h5 class="ac-title">Qu’est-ce que la myopie?</h5>
+													<div class="ac-content">
+														<p>Il faut amener votre enfant chez l’optométriste dès qu’il manifeste une plainte visuelle ou un comportement vous faisant douter d’un problème de vision. Dès l’âge de trois ans, à l’aide de dessins et de tests objectifs, l’optométriste pourra identifier le trouble visuel de votre enfant. </p>
+
+														<p>Ensuite, il est recommandé de passer un examen de la vue avant de débuter la maternelle pour s’assurer du bon fonctionnement du système visuel, car ce dernier peut avoir un impact important l’apprentissage de connaissances scolaires.
+														<p>
+														La croissance du corps s’accompagnant de celle du globe oculaire, la vision peut changer et un examen visuel annuel est fortement recommandé. De plus, personne n’est à l’ abri des maladies oculaires et des complications! Certaines pathologies s’installent sans symptômes préalables. Faire vérifier la santé de vos yeux une fois par année vous permet de bénéficier de la meilleure santé oculaire possible et de la meilleure vision s’y associant.
+														</p>
+							                        </div>
+												</div>
+												<!-- // item  -->																								
+	
+											</div>
+											<!--END: Accordion default-->
+
+                                    </div>
+                                    <!-- // item desc  -->
+
+
+
+                                </div>
+                            </div>
+                            <!-- end: Post single item-->
+                        </div>
+
+
+                        <!-- Gallery -->
+                        <div class="grid-layout grid-3-columns" data-margin="20" data-item="grid-item" data-lightbox="gallery">
+                            <div class="grid-item">
+                             
+                                    <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/img/new/service1.jpg"></a>
+                              
+                            </div>
+                            <div class="grid-item">
+                                <a class="image-hover-zoom" href="images/gallery/2.jpg" data-lightbox="gallery-item"><img src="/img/new/service1.jpg"></a>
+                            </div>
+                            <div class="grid-item">
+                                <a class="image-hover-zoom" href="images/gallery/3.jpg" data-lightbox="gallery-item"><img src="/img/new/service1.jpg"></a>
+                            </div>
+                            <div class="grid-item">
+                                <a class="image-hover-zoom" href="images/gallery/4.jpg" data-lightbox="gallery-item"><img src="/img/new/service1.jpg"></a>
+                            </div>
+                            <div class="grid-item">
+                                <a class="image-hover-zoom" href="images/gallery/5.jpg" data-lightbox="gallery-item"><img src="/img/new/service1.jpg"></a>
+                            </div>
+                            <div class="grid-item">
+                                <a class="image-hover-zoom" href="images/gallery/6.jpg" data-lightbox="gallery-item"><img src="/img/new/service1.jpg"></a>
+                            </div>
+                        </div>
+                        <!-- end: Gallery -->                        
+
+                    </div>
+                    <!-- end: content -->
+
+                </div>
+            </div>
+        </section>
+        <!-- end: Page Content -->
 
 
 </main>
